--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hk-independent-bus-eta",
   "version": "0.1.0",
   "private": true,
+  “homepage”: “http://thomassth.github.io/hk-independent-bus-eta/",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
