--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "proj4": "^2.7.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-i18next": "^11.8.13",
     "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
